# content-generation

./: .gitignore  README.md  dashboard.py  evals.py  pyproject.toml
evals/: scorers.py  solvers.py  tasks.py
logs/: 2026-05-01T15-13-34-00-00_fixture-eval_gWpRjsCCrbK8X2Xqnc7UUT.eval  2026-05-01T15-14-18-00-00_golden-eval_ftJEBm9FjNj5cf4CJ3Lmcv.eval  2026-05-01T15-16-18-00-00_fixture-eval_D5r99sqTtaj2aCFKnWr2RW.eval  2026-05-01T15-16-57-00-00_golden-eval_ZJbC9RdKuqwnLRXC9j3bMe.eval  2026-05-01T18-17-42-00-00_fixture-eval_Xt6pVWmsvq3AU49gJ6fm4q.eval  2026-05-01T18-18-25-00-00_golden-eval_XcoGonhC8TXYCAKjuk4w7U.eval  2026-05-01T18-19-05-00-00_fixture-eval-template_4zYioRHAeEVTLxaQNNXRLq.eval  2026-05-01T18-19-10-00-00_golden-eval-template_RLiiJDTfbtzcQP7nU9dBeJ.eval  2026-05-01T18-47-48-00-00_fixture-eval_hBkjduuysRDpSCsm5xukhx.eval  2026-05-01T18-49-05-00-00_golden-eval_aZoFRwugH7kZ38eMoQz3gW.eval  2026-05-01T18-49-35-00-00_fixture-eval-template_Zu6MNtBQ32G7JcWqAykhyk.eval  2026-05-01T18-49-43-00-00_golden-eval-template_m5PnsUg7RSL56h3BAM42ic.eval  2026-05-01T18-59-38-00-00_fixture-eval_LzRCK3FQz54LNstnmrPJf2.eval  2026-05-01T19-01-09-00-00_golden-eval_JtDiTfAG2yvhF5pXEASATa.eval  2026-05-01T19-01-39-00-00_fixture-eval-template_WAg3nGwUqGKrMyrcCqvB8C.eval  2026-05-01T19-01-48-00-00_golden-eval-template_WL3KaRK2cbr9gmD6FjPbbx.eval
src/content_generation/: __init__.py  amenities.py  fixtures.py  generator.py  golden.py  models.py  prompts.py  template_generator.py  (+1 more)
tests/: conftest.py  test_generator.py  test_models.py  test_scorers.py  test_template_generator.py
(+11 files in other folders)
