[project]
name = "content-generation"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.10",
    "inspect-ai>=0.3.0",
    "marimo>=0.9.0",
    "python-dotenv>=1.0",
    "plotly>=5.0",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_generation"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
